--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-termion = "1.5"
 crossterm = "0.19"
-tui = "0.15"
+tui = { version = "0.15", default-features = false, features = ['crossterm'] }
+terminal-menu = "2.0"
+termion = "1.5"
+youchoose = "0.1.1"
+piston = "0.36.0"
+piston2d-graphics = "0.26.0"
+pistoncore-glutin_window = "0.45.0"
+piston2d-opengl_graphics = "0.52.0"
+rand = "0.4"
